# FpgaAccManager

./: CMakeLists.txt  README.md
src/: acc_manager.cc  acc_manager.h  main.cc
